Version 1.0.1 (not yet released):
- Gnulib update. The modules nanosleep and gettimeofday still differ from the
  official gnulib source.
- Adapt --version output to the latest GNU conventions.
- Clean up #includes.
- Move check for delivery information from main() into check_account().
- Added support for %U and %H expansion in UIDLS file names. This allows to 
  have per-account UIDLS files with just one setting in the defaults
  section. The default UIDLS file name was not changed yet to keep
  compatibility with 1.0.0.
- Automatically create directories needed to store the UIDLS file.
- Gnulib update. Added the xstrndup module. The modules nanosleep and
  gettimeofday still differ from the official gnulib source.
- Move string_replace from delivery.c to tools.[ch] to make it available to
  other modules.
- Renamed os_env.[ch] to tools.[ch].
- Replace __MINGW__ with W32_NATIVE in os_env.h.
- Check that the first command in the configuration file is either account or 
  defaults. This fixes a crash (NULL pointer dereferencing) when the first 
  command in the file is valid but does not belong to an account.
- W32 port: Fixed the replacements for the WIFEXITED and WEXITSTATUS macros in
  delivery.c. Thanks to Gizbern for the bug report.
- Minor documentation improvements.
- Enable network connection timeouts on DJGPP/Watt32. Thanks to Gisle Vanem for
  pointing out that this works just like it does with UNIX. The DJGPP/Watt32
  port is now on par with the UNIX port.
- Update README.dos.
- Don't check configuration file permissions on Cygwin.

Version 1.0.0:
- Gnulib update. Added gettimeofday module.
  Note that a locally modified copy of gnulib was used. It contains patches for
  the getpass, nanosleep, and gettimeofday modules, plus the additional module 
  sys_select. All of these changes were submitted to the bug-gnulib@gnu.org
  mailing list, but they are not integrated yet.
- Removed some W32 specific defines from delivery.c because they are not 