@@ -37,7 +37,7 @@ extern int errno;
 #include <sys/stat.h>
 #include <unistd.h>
 #include <sysexits.h>
-#ifdef HAVE_SIGACTION
+#if HAVE_SIGACTION
 # include <signal.h>
 #endif
 #ifdef W32_NATIVE
@@ -138,14 +138,14 @@ const char *exitcode_to_string(int exitcode)
  *
  ******************************************************************************/
 
-#ifdef HAVE_SIGACTION
-static int mda_caused_sigpipe;
+#if HAVE_SIGACTION
+static volatile sig_atomic_t mda_caused_sigpipe;
 static struct sigaction mda_old_sigpipe_handler;
 static void mda_sigpipe_handler(int signum UNUSED)
 {   
     mda_caused_sigpipe = 1;
 }
-#endif /* HAVE_SIGACTION */
+#endif
 
 int delivery_method_mda_open(delivery_method_t *dm, const char *from, long size,
 	char **errstr)
@@ -185,14 +185,14 @@ int delivery_method_mda_close(delivery_method_t *dm, char **errstr)
     const char *tmp;
     
     status = pclose(dm->pipe);
-#ifdef HAVE_SIGACTION
+#if HAVE_SIGACTION
     if (mda_caused_sigpipe)
     {
 	*errstr = xasprintf(_("%s did not read mail data"), (char *)(dm->data));
 	return DELIVERY_EUNKNOWN;
     }
     else
-#endif /* HAVE_SIGACTION */
+#endif
     if (status == -1 || !WIFEXITED(status))
     {
 	*errstr = xasprintf(_("%s failed to execute"), (char *)(dm->data));
@@ -225,9 +225,9 @@ int delivery_method_mda_close(delivery_method_t *dm, char **errstr)
 int delivery_method_mda_init(delivery_method_t *dm, void *data, 
 	char **errstr UNUSED)
 {
-#ifdef HAVE_SIGACTION
+#if HAVE_SIGACTION
     struct sigaction signal_handler;
-#endif /* HAVE_SIGACTION */
+#endif
 
     dm->data = data;
     dm->need_from_quoting = 0;
@@ -235,22 +235,22 @@ int delivery_method_mda_init(delivery_method_t *dm, void *data,
     dm->want_size = 0;
     dm->open = delivery_method_mda_open;
     dm->close = delivery_method_mda_close;
-#ifdef HAVE_SIGACTION
+#if HAVE_SIGACTION
     mda_caused_sigpipe = 0;
     signal_handler.sa_handler = mda_sigpipe_handler;
     sigemptyset(&signal_handler.sa_mask);
     signal_handler.sa_flags = 0;
     (void)sigaction(SIGPIPE, &signal_handler, &mda_old_sigpipe_handler);
-#endif /* HAVE_SIGACTION */
+#endif
     return DELIVERY_EOK;
 }
 
 int delivery_method_mda_deinit(delivery_method_t *dm UNUSED, 
 	char **errstr UNUSED)
 {
-#ifdef HAVE_SIGACTION
+#if HAVE_SIGACTION
     (void)sigaction(SIGPIPE, &mda_old_sigpipe_handler, NULL);
-#endif /* HAVE_SIGACTION */    
+#endif
     return DELIVERY_EOK;
 }
 
@@ -269,14 +269,14 @@ int delivery_method_filter_close(delivery_method_t *dm, char **errstr)
     const char *tmp;
     
     status = pclose(dm->pipe);
-#ifdef HAVE_SIGACTION
+#if HAVE_SIGACTION
     if (mda_caused_sigpipe)
     {
 	*errstr = xasprintf(_("%s did not read mail data"), (char *)(dm->data));
 	return DELIVERY_EUNKNOWN;
     }
     else
-#endif /* HAVE_SIGACTION */
+#endif
     if (status == -1 || !WIFEXITED(status))
     {
 	*errstr = xasprintf(_("%s failed to execute"), (char *)(dm->data));
