@@ -1,4 +1,6 @@
 Version 1.0.1 (not yet released):
+- Fixed types of variables that are changed by signal handlers: they are
+  'volatile sig_atomic_t' now.
 - Gnulib update. The modules nanosleep and gettimeofday still differ from the
   official gnulib source.
 - Adapt --version output to the latest GNU conventions.
